# repotracker

./: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
database/: repodb_schema.sql
migrations/: env.py
src/db/: database.py  models.py
src/objects/: DataGatherer.py  RepositoryManager.py  database_orm.py
src/repotracker/: config.py  logging_config.py
tests/: conftest.py
tracked_repos/: repositories.json
