[project]
name = "repotracker"
version = "0.1.0"
description = "Simple tracker for internal github projects."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "gitpython>=3.1.44",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.9.7",
    "sqlalchemy>=2.0.40",
]
